# wotw-rando-client

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .net.dllexport.targets  CMakeLists.txt  LICENSE  OriAutoTracker.ahk  README.md  RandoSettings.ahk  RunInject.bat  WotwRando.ahk  WotwRando.sln  compile.bat  conan_include.cmake  controller_bindings.cfg  controller_bindings.json  controller_bindings.rkbn  credits  derp.wotwr  gen-win64.bat  gen_win64_vs2019.bat  gen_win64_vs2019_add_internal_headers.bat  gen_win64_vs2019_regen.bat  gen_win64_vs2022.bat  gen_win64_vs2022.release.bat  generate-cmake.debug-vs2022.bat  generate-cmake.profiler-ninja.bat  generate-cmake.release-ninja.bat  keyboard_bindings.json  modloader_config.json  seedgen.dockerfile  vcpkg-configuration.json  vcpkg.json
projects/: CMakeLists.txt
projects/AutoTracker/: ColourPickerFunctions.ahk  OriAutoTracker.ahk  WatchFolder.ahk
projects/Common/: CMakeLists.txt  blocking_queue.h  csv.cpp  csv.h  droppable.h  env.h  event_bus.h  event_bus_data.h  event_timing.h  ext.cpp  ext.h  is_in.h  math_utils.cpp  math_utils.h  registration_handle.h  settings.cpp  settings.h  settings_reader.h  thread_safe_container.h  vx.h
projects/Core/: CMakeLists.txt  async_update.cpp  async_update.h  cached_loader.h  console_update.cpp  constants.h  core.cpp  core.h  dirty_value.h  dynamic_value.h  fs.cpp  fs.h  id_registry.h  mood_guid.cpp  mood_guid.h  property.h  settings.cpp  settings.h  sound.cpp  sound.h  task.cpp  task.h  text_database.cpp  text_database.h  text_style.cpp  text_style.h  unity_update_loop.cpp
projects/Core/actors/: actor.cpp  actor.h  actor_events.h
projects/Core/animation/: animation.cpp  animation.h  timeline.cpp  timeline.h  timeline_state.h
projects/Core/api/: audio.h  (+11 more)
projects/GuiEngine/: CMakeLists.txt  build.h.in  engine.h  opengl_engine.cpp  vulkan_engine.cpp
projects/Il2CppModLoader/: CMakeLists.txt  bootstrap.cpp  common.h  console.cpp  console.h  console_update.cpp  constants.h  cpp.hint  dll_main.cpp  framework.h  il2cpp_helpers.cpp  il2cpp_helpers.h  il2cpp_math.h  interception.cpp  interception.h  interception_macros.h  macros.h  math.h
projects/InjectDLL/: CMakeLists.txt  PEModule.cpp  bootstrap.cpp  common.h  constants.h  cpp.hint  csharp_bridge.cpp  csharp_bridge.h  dev_commands.cpp  dev_commands.h  dll_main.cpp  dll_main.h  dllmain.cpp  enum_definitions.h  framework.h  il2cpp_helpers.cpp  il2cpp_helpers.h  interception.cpp  interception.h  interception_macros.h  macros.h  pch.h  pe_module.cpp
projects/InjectLoader/: CMakeLists.txt  loader.cpp  loader.h  loader_payload.h  macros.h
projects/InjectProxy/: CMakeLists.txt  hook.h  proxied_functions.h  proxy.cpp  utils.h  winhttp_proxy.cpp  winhttp_proxy.h  winhttp_proxy_functions.h
projects/Injector/: CMakeLists.txt  Injector.csproj  Injector.csproj.in  Program.cs  get_process_address.cpp  get_process_address.h  injector.cpp  shared_memory.cpp  shared_memory.h
projects/Modloader/: CMakeLists.txt  common.h  console_logging_handler.cpp  console_logging_handler.h  constants.h  dll_main.cpp  file_logging_handler.cpp  file_logging_handler.h  il2cpp_helpers.cpp  il2cpp_helpers.h  il2cpp_math.h  interception.cpp  interception.h  interception_macros.h  modloader.cpp  modloader.h  udp_socket.cpp  udp_socket.h
projects/Profiler/: CMakeLists.txt  tracy.h
projects/RVAUpdater/: CMakeLists.txt  RVAUpdate.cs
projects/RandoMainDLL/: AHK.cs  BonusItemController.cs  CMakeLists.txt  Color.cs  CppCallbacks.cs  CreditsController.cs  DiscordController.cs  Extensions.cs  HideAndSeek.cs  HintsController.cs  Infection.cs  Input.cs  InterOp.cs  LocData.cs  MapController.cs  MessageController.cs  Messaging.cs  Multiplayer.cs  Pickup.cs  PickupCollection.cs  RVAFinder.cs  Randomizer.cs  Relics.cs  SaveController.cs  SeedController.cs  SeedSettings.cs  ShopController.cs  StatsTracker.cs  TrackFileController.cs  UDPSocketClient.cs  UberStateController.cs  Value.cs  WebSocketClient.cs  WheelManager.cs
projects/RandoSettings/: build.sbt
projects/Randomizer/: .editorconfig  CMakeLists.txt  collision.cpp  collision.h  constants.h  custom_skin.cpp  ghosts.cpp  ghosts.h  ghosts_playground.cpp  macros.h  multiplayer.cpp  multiplayer.h  randomizer.cpp  randomizer.h  shrek.cpp  text_processing.cpp  timer.cpp  timer.h  trial.cpp  trial.h
projects/RandomizerBridge/: CMakeLists.txt  assembly_info.cpp  csharp_bridge.cpp  csharp_bridge.h  enum_definitions.h  macros.h  runtime_initializer.cpp
projects/RandomizerManaged/: AHK.cs  BonusItemController.cs  CMakeLists.txt  Color.cs  CppCallbacks.cs  CreditsController.cs  Extensions.cs  HideAndSeek.cs  HintsController.cs  Infection.cs  Input.cs  InterOp.cs  LocData.cs  MapController.cs  MessageController.cs  Multiplayer.cs  Pickup.cs  PickupCollection.cs  Randomizer.cs  Relics.cs  SaveController.cs  SeedController.cs  SeedSettings.cs  ShopController.cs  StatsTracker.cs  TrackFileController.cs  UDPSocketClient.cs  UberStateController.cs  Value.cs  WebSocketClient.cs  WheelManager.cs
projects/RandomizerTester/: CMakeLists.txt  enemy_reporter.cpp  message_tests.cpp  test_runner.cpp  test_runner.h
projects/SeedGen/: areas.wotw  build.sbt  loc_data.csv  nofluff.wotw  seed.wotwr  seed_0.wotwr  seed_1.wotwr  seed_2.wotwr
projects/SeedGenCli/: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  app.cpp  area_tree.cpp  area_tree.h  areas.wotw  example_header.txt  loc_data.csv  run.bat  state_data.csv
projects/TAS/: CMakeLists.txt  tas.cpp  trials_config.cpp
projects/TraceClientManaged/: .editorconfig  CMakeLists.txt  NetClient.cs  TraceClient.cs
projects/TraceServer/: CMakeLists.txt  app.cpp  binary_walker.cpp  binary_walker.h  build.h.in  ext.cpp  ext.h  opengl_engine.h  server.cpp  server.h  settings.h  trace_structs.h  vulkan_engine.h
projects/Tracy/: CMakeLists.txt  macros.h  tracy.cpp
projects/WinNetwork/: CMakeLists.txt  binary_walker.cpp  binary_walker.h  constants.cpp  constants.h  ext.cpp  ext.h  peer.cpp  peer.h
projects/wotw-server/: .gitignore  build.gradle.kts  settings.gradle.kts
(+329270 files in other folders)
