add_subdirectory("Common")
add_subdirectory("GuiEngine")
add_subdirectory("TraceClientManaged")
add_subdirectory("WinNetwork")

add_subdirectory("Injector")
add_subdirectory("InjectLoader")
add_subdirectory("Il2CppModLoader")
add_subdirectory("RandoMainDLL")
add_subdirectory("InjectDLL")
add_subdirectory("RVAUpdater")
add_subdirectory("TraceServer")